--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cookie-parser": "^1.4.7",
     "express-session": "^1.18.1",
     "ioredis": "^5.6.0",
+    "jsonwebtoken": "^9.0.2",
     "nest-winston": "^1.10.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
