--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "socket.io": "^4.8.1",
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.21",
+    "uuid": "^11.1.0",
     "whatsapp-web.js": "^1.27.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
