--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cookie": "^1.0.2",
     "cookie-parser": "^1.4.7",
     "express-session": "^1.18.1",
     "ioredis": "^5.6.0",
