--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "qrcode-terminal": "^0.12.0",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.2.0",
+    "rimraf": "^6.0.1",
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.1",
     "swagger-ui-express": "^5.0.1",
