--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@faker-js/faker": "^9.6.0",
+    "@nestjs-redis/throttler-storage": "^0.11.2",
     "@nestjs/axios": "^4.0.0",
     "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.0.11",
@@ -35,6 +36,7 @@
     "@nestjs/platform-socket.io": "^11.1.0",
     "@nestjs/schedule": "^5.0.1",
     "@nestjs/swagger": "^11.0.6",
+    "@nestjs/throttler": "5.1.2",
     "@nestjs/typeorm": "^11.0.0",
     "@nestjs/websockets": "^11.1.0",
     "amqp-connection-manager": "^4.1.14",
@@ -51,6 +53,7 @@
     "ioredis": "^5.6.0",
     "jsonwebtoken": "^9.0.2",
     "nest-winston": "^1.10.2",
+    "nestjs-throttler-storage-redis": "^0.5.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
